k8s_cluster/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inspire
  labels:
    name: inspire
spec:
  replicas: 3
  selector:
    matchLabels:
      app: inspire
  template:
    metadata:
      labels:
        app: inspire
    spec:
      containers:
      - name: inspire
        image: itagar/inspr:latest
        #imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: inspire-service
  labels:
    app: inspire
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: inspire
  type: NodePort


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    name: postgres
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pv-claim



---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  selector:
    app: postgres
